--- a/wofi/style.css
+++ b/wofi/style.css
@@ -1,42 +1,39 @@
 window {
-    background-color: #3B4252;
+    margin: 0px;
+    border: 1px solid #7A8478;
+    background-color: #1E2326;
 }
 
 #input {
     margin: 5px;
-    border-radius: 0px;
     border: none;
-    background-color: #3B4252;
-    color: white;
+    color: #D3C6AA;
+    background-color: #272E33;
 }
 
 #inner-box {
-    background-color: #383C4A;
+    margin: 5px;
+    border: none;
+    background-color: #1E2326;
 }
 
 #outer-box {
-    margin: 2px;
-    padding: 10px;
-    background-color: #383C4A;
+    margin: 5px;
+    border: none;
+    background-color: #1E2326;
 }
 
 #scroll {
-    margin: 5px;
+    margin: 0px;
+    border: none;
 }
 
 #text {
-    padding: 4px;
-    color: white;
-}
-
-#entry:nth-child(even){
-    background-color: #404552;
+    margin: 5px;
+    border: none;
+    color: #D3C6AA;
 }
 
 #entry:selected {
-    background-color: #4C566A;
-}
-
-#text:selected {
-    background: transparent;
+    background-color: #272E33;
 }
